Fixed three column layout breaking. Added additional images (and changed existing images for three column layout). General CSS changes.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #f2f2f2;
+}
+
 #wrapper {
     width: 80%;
     margin-right: auto;
@@ -47,6 +51,11 @@
 
 .footnav {
     padding: 5px;
+}
+
+#demovideo {
+    display: block;
+    margin: auto;
 }
 
 #zein img {
@@ -102,16 +111,26 @@ textarea {
 #firstcol {
     text-align: center;
     float: left;
-    width: 330px;
+    width: 33%;
 }
 
 #secondcol {
     text-align: center;
-    margin: 0 340px 0 340px;
+    display: inline-block; width: 33%;
 }
 
 #thirdcol {
     text-align: center;
     float: right;
-    width: 330px;
+    width: 33%;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
+}
+
+.effectname {
+    text-align: center;
 }
